added modified 5 files, deleted 6 files, added 15 new image files

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-      	<div class="img" style="background-image: url(images/author-2.jpg);"></div>
+      	<div class="img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Tywunda Shivers</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></span>Tywunda Shivers</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -73,7 +73,7 @@
       <section class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex my-5" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
+            <div class="col-md-4 author-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
@@ -103,12 +103,6 @@
 	          		<div class="row my-5">
 		          		<div class="col-md-6">
 		          			<p><strong>Name:</strong> <span>Tywunda Shivers</span></p>
-		          			<p><strong>Address:</strong> <span>111 Some Street, Suite 777 Los Angeles CA </span></p>
-		          			<p><strong>Phone:</strong> <span>(123)-456-789</span></p>
-		          		</div>
-		          		<div class="col-md-6">
-		          			<p><strong>Name:</strong> <span>Tywunda Shivers</span></p>
-		          			<p><strong>Address:</strong> <span>111 Some  Street, Suite 777 New York NY 10016</span></p>
 		          			<p><strong>Phone:</strong> <span>(123)-456-789</span></p>
 		          		</div>
 	          		</div>
@@ -116,33 +110,23 @@
 
           		<div class="exp mt-5 ftco-animate">
           			<h2 class="mb-4">Experience</h2>
-          			<div class="exp-wrap py-4">
+					  <div class="exp-wrap py-4">
+						<div class="desc">
+							<h4>Full Stack Software Developer<span> - Contractor</span> </h4>
+							<p class="location">Los Angeles - California</p>
+						</div>
+						<div class="year">
+							<p>2019</p>
+						</div>
+					</div>  
+					
+					  <div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Technical Technical Operations Specialist <span> The Walt Disney Company</span> </h4>
+	          				<h4>Technical Operations Specialist <span> - The Walt Disney Company</span> </h4>
 	          				<p class="location">Burbank - California</p>
           				</div>
           				<div class="year">
           					<p>2002 - Present</p>
-          				</div>
-          			</div>
-
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h4>UX &amp; UI Designer <span> - QBootstrap.com</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
-          				</div>
-          				<div class="year">
-          					<p>2015 - 2017</p>
-          				</div>
-          			</div>
-
-          			<div class="exp-wrap py-4">
-          				<div class="desc">
-	          				<h4>Designer &amp; Developer <span> - Themeforest.net</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
-          				</div>
-          				<div class="year">
-          					<p>2014 - 2015</p>
           				</div>
           			</div>
           		</div>
