--- a/blog-single.html
+++ b/blog-single.html
@@ -37,7 +37,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-      	<div class="img" style="background-image: url(images/author-2.jpg);"></div>
+      	<div class="img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Tywunda Shivers</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></span>Tywunda Shivers</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -75,26 +75,25 @@
         	<div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>Blog</span>
-              <h2>Read My Blog</h2>
+              <h2>Behind The Groove</h2>
             </div>
           </div>
+            <p>
+              <img src="images/ty-animation-image.jpg" alt="" class="img-fluid">
+            </p>
           <div class="row d-flex justify-content-center">
-            <div class="col-md-8">
-              <h2 class="mb-3">Behind The Groove</h2>
+             <div class="col-md-8">
+              <h2 class="mb-3">Food For Thought</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
-              <p>
-                <img src="images/image_6.jpg" alt="" class="img-fluid">
-              </p>
+
               <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-              <h2 class="mb-3 mt-5">Food For Thought</h2>
+              <h2 class="mb-3 mt-5">Fashion Icon</h2>
               <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
               <p>
-                <img src="images/image_8.jpg" alt="" class="img-fluid">
+                <img src="images/fashion-icon.jpg" alt="" class="img-fluid">
               </p>
               <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
               <p>Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
-              <p>Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
-              <p>Voluptas dolores dignissimos dolorum temporibus, autem aliquam ducimus at officia adipisci quasi nemo a perspiciatis provident magni laboriosam repudiandae iure iusto commodi debitis est blanditiis alias laborum sint dolore. Dolores, iure, reprehenderit. Error provident, pariatur cupiditate soluta doloremque aut ratione. Harum voluptates mollitia illo minus praesentium, rerum ipsa debitis, inventore?</p>
               <div class="tag-widget post-tag-container mb-5 mt-5">
                 <div class="tagcloud">
                   <a href="#" class="tag-cloud-link">Life</a>
@@ -106,7 +105,7 @@
               
               <div class="about-author d-flex pt-5">
                 <div class="bio align-self-md-center mr-4">
-                  <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4">
+                  <img src="images/tshivers-temp-profile-pic.jpg" alt="Image placeholder" class="img-fluid mb-4">
                 </div>
                 <div class="desc align-self-md-center">
                   <h3>About The Author</h3>
@@ -116,11 +115,11 @@
 
 
               <div class="pt-5 mt-5">
-                <h3 class="mb-5">6 Comments</h3>
+                <h3 class="mb-5">Your Thoughts</h3>
                 <ul class="comment-list">
                   <li class="comment">
                     <div class="vcard bio">
-                      <img src="images/person_1.jpg" alt="Image placeholder">
+                      <img src="images/tshivers-temp-profile-pic.jpg" alt="Image placeholder">
                     </div>
                     <div class="comment-body">
                       <h3>Jean Doe</h3>
@@ -132,7 +131,7 @@
 
                   <li class="comment">
                     <div class="vcard bio">
-                      <img src="images/person_1.jpg" alt="Image placeholder">
+                      <img src="images/tshivers-temp-profile-pic.jpg" alt="Image placeholder">
                     </div>
                     <div class="comment-body">
                       <h3>Jean Doe</h3>
@@ -144,7 +143,7 @@
                     <ul class="children">
                       <li class="comment">
                         <div class="vcard bio">
-                          <img src="images/person_1.jpg" alt="Image placeholder">
+                          <img src="images/tshivers-temp-profile-pic.jpg" alt="Image placeholder">
                         </div>
                         <div class="comment-body">
                           <h3>Jean Doe</h3>
@@ -157,7 +156,7 @@
                         <ul class="children">
                           <li class="comment">
                             <div class="vcard bio">
-                              <img src="images/person_1.jpg" alt="Image placeholder">
+                              <img src="images/tshivers-temp-profile-pic.jpg" alt="Image placeholder">
                             </div>
                             <div class="comment-body">
                               <h3>Jean Doe</h3>
@@ -169,7 +168,7 @@
                               <ul class="children">
                                 <li class="comment">
                                   <div class="vcard bio">
-                                    <img src="images/person_1.jpg" alt="Image placeholder">
+                                    <img src="images/tshivers-temp-profile-pic.jpg" alt="Image placeholder">
                                   </div>
                                   <div class="comment-body">
                                     <h3>Jean Doe</h3>
@@ -187,7 +186,7 @@
 
                   <li class="comment">
                     <div class="vcard bio">
-                      <img src="images/person_1.jpg" alt="Image placeholder">
+                      <img src="images/tshivers-temp-profile-pic.jpg" alt="Image placeholder">
                     </div>
                     <div class="comment-body">
                       <h3>Jean Doe</h3>
@@ -246,7 +245,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Me</h2>
-                <p class="h3 email"><a href="#">codeTy@email.com</a></p>
+                <p class="h3 email"><a href="#">codeTy.404@email.com</a></p>
               </div>
             </div>
           </div>
