--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-      	<div class="img" style="background-image: url(images/author-2.jpg);"></div>
+      	<div class="img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Tywunda Shivers</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></span>Tywunda Shivers</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -81,11 +81,11 @@
 	        <div class="row">
 	          <div class="col-md-4 ftco-animate">
 	            <div class="blog-entry">
-	              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+	              <a href="blog-single.html" class="block-20" style="background-image: url('images/brooklyn-bridge-image.png');">
 	              </a>
 	              <div class="text p-4 d-block">
 	                <div class="meta mb-3">
-	                  <div><a href="#">November 13, 2019</a></div>
+	                  <div><a href="#">October 19, 2019</a></div>
 	                  <div><a href="#">Admin</a></div>
 	                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 	                </div>
@@ -95,11 +95,11 @@
 	          </div>
 	          <div class="col-md-4 ftco-animate">
 	            <div class="blog-entry" data-aos-delay="100">
-	              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+	              <a href="blog-single.html" class="block-20" style="background-image: url('images/floral-image.jpg');">
 	              </a>
 	              <div class="text p-4">
 	                <div class="meta mb-3">
-	                  <div><a href="#">November 6, 2019</a></div>
+	                  <div><a href="#">October 31, 2019</a></div>
 	                  <div><a href="#">Admin</a></div>
 	                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 	                </div>
@@ -109,11 +109,11 @@
 	          </div>
 	          <div class="col-md-4 ftco-animate">
 	            <div class="blog-entry" data-aos-delay="200">
-	              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+	              <a href="blog-single.html" class="block-20" style="background-image: url('images/alvin-ailey-drums.png');">
 	              </a>
 	              <div class="text p-4">
 	                <div class="meta mb-3">
-	                  <div><a href="#">October 31, 2019</a></div>
+	                  <div><a href="#">November 6, 2019</a></div>
 	                  <div><a href="#">Admin</a></div>
 	                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 	                </div>
@@ -137,11 +137,11 @@
 	          </div>
 	          <div class="col-md-4 ftco-animate">
 	            <div class="blog-entry" data-aos-delay="100">
-	              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_5.jpg');">
+	              <a href="blog-single.html" class="block-20" style="background-image: url('images/vintage-mic-image.png');">
 	              </a>
 	              <div class="text p-4">
 	                <div class="meta mb-3">
-	                  <div><a href="#">July 12, 2018</a></div>
+	                  <div><a href="#">November 13, 2019</a></div>
 	                  <div><a href="#">Admin</a></div>
 	                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 	                </div>
@@ -151,11 +151,11 @@
 	          </div>
 	          <div class="col-md-4 ftco-animate">
 	            <div class="blog-entry" data-aos-delay="200">
-	              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_6.jpg');">
+	              <a href="blog-single.html" class="block-20" style="background-image: url('images/behind-the-groove.jpg');">
 	              </a>
 	              <div class="text p-4">
 	                <div class="meta mb-3">
-	                  <div><a href="#">July 12, 2018</a></div>
+	                  <div><a href="#">November 20, 2019</a></div>
 	                  <div><a href="#">Admin</a></div>
 	                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 	                </div>
@@ -195,7 +195,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Me</h2>
-                <p class="h3 email"><a href="#">codeTy@email.com</a></p>
+                <p class="h3 email"><a href="#">codeTy.404@email.com</a></p>
               </div>
             </div>
           </div>
