--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-      	<div class="img" style="background-image: url(images/author-2.jpg);"></div>
+      	<div class="img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></span>Tywunda Shivers</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -78,16 +78,13 @@
             </div>
             <div class="w-100"></div>
             <div class="col-md-3">
-              <p><span>Address:</span> 111 Some Street, Suite 777 Los Angeles, CA 90024</p>
+              <p><span>Phone:</span> <a href="tel://1234567920"> (123) 456-6789</a></p>
             </div>
-            <div class="col-md-3">
-              <p><span>Phone:</span> <a href="tel://1234567920">+ (123) 456-6789</a></p>
+            <div class="col-md-4">
+              <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@codeTy.404.com</a></p>
             </div>
-            <div class="col-md-3">
-              <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@codeTy.com</a></p>
-            </div>
-            <div class="col-md-3">
-              <p><span>Website:</span> <a href="#">codeTy@email.com</a></p>
+            <div class="col-md-5">
+              <p><span>Website:</span> <a href="#">codeTy.404@email.com</a></p>
             </div>
           </div>
           <div class="row block-9">
@@ -129,7 +126,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Me</h2>
-                <p class="h3 email"><a href="#">codeTy@email.com</a></p>
+                <p class="h3 email"><a href="#">codeTy.404@email.com</a></p>
               </div>
             </div>
           </div>
