--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-        <div class="img" style="background-image: url(images/.tshivers-temp-profile-pic.jpg);"></div>
+        <div class="img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Tywunda Shivers</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></span>Tywunda Shivers</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -100,7 +100,7 @@
       <section class="ftco-section about-section">
         <div class="container">
           <div class="row d-flex" data-scrollax-parent="true">
-            <div class="col-md-4 author-img" style="background-image: url(images/author-1.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
+            <div class="col-md-4 author-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);" data-scrollax=" properties: { translateY: '-70%'}"></div>
             <div class="col-md-2"></div>
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
@@ -115,7 +115,7 @@
                     <li><a href="#"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>Contact Me Here!</h5>
-                  <p>Email: <a href="#">codeTy@email</a></p>
+                  <p>Email: <a href="#">codeTy.404@email</a></p>
                   <p>Phone: <a href="#">(123)-456-789</a></p>
                 </div>
               </div>
@@ -177,26 +177,26 @@
           </div>
           <div class="row no-gutters">
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/code-syntax-image.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Illustration</h4>
+              <h4 class="subheading">Application</h4>
               <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text order-1">
-              <h4 class="subheading">Application</h4>
+              <h4 class="subheading">JavaScript</h4>
               <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
@@ -216,20 +216,20 @@
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/ty-sketch-image.png'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
             </a>
             <div class="text order-1">
-              <h4 class="subheading">Application</h4>
+              <h4 class="subheading">Graphics</h4>
               <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-5.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/image_4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -242,7 +242,7 @@
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
               <div class="icon d-flex text-center justify-content-center align-items-center">
                 <span class="icon-search"></span>
               </div>
@@ -280,7 +280,7 @@
             <div class="col-md-5 col-sm-5 counter-wrap ftco-animate">
               <div class="block-18">
                 <div class="text">
-                  <span class="ftco-label">Project done</span>
+                  <span class="ftco-label">Projects Done</span>
                   <strong class="number" data-number="327">0</strong>
                 </div>
               </div>
@@ -290,7 +290,7 @@
             <div class="col-md-5 counter-wrap ftco-animate">
               <div class="block-18">
                 <div class="text">
-                  <span class="ftco-label">Cups of tea</span>
+                  <span class="ftco-label">Cups of Tea</span>
                   <strong class="number" data-number="1000">0</strong>
                 </div>
               </div>
@@ -312,7 +312,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Me</h2>
-                <p class="h3 email"><a href="#">codeTy@email.com</a></p>
+                <p class="h3 email"><a href="#">codeTy.404@email.com</a></p>
               </div>
             </div>
           </div>
