--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Tywunda Shivers</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></span>Tywunda Shivers</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -80,26 +80,26 @@
           </div>
           <div class="row no-gutters">
 	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/work-1.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+	            <a href="portfolio-single.html" class="image d-flex justify-content-center align-items-center" style="background-image: url('images/code-syntax-image.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
 	              <div class="icon d-flex text-center justify-content-center align-items-center">
 	                <span class="icon-search"></span>
 	              </div>
 	            </a>
 	            <div class="text">
-	              <h4 class="subheading">Illustration</h4>
+	              <h4 class="subheading">Application</h4>
 	              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
 	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
 	              <p><a href="#">View Project</a></p>
 	            </div>
 	          </div>
 	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-2.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
 	              <div class="icon d-flex text-center justify-content-center align-items-center">
 	                <span class="icon-search"></span>
 	              </div>
 	            </a>
 	            <div class="text order-1">
-	              <h4 class="subheading">Application</h4>
+	              <h4 class="subheading">JavaScript</h4>
 	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
 	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
 	              <p><a href="#">View Project</a></p>
@@ -119,13 +119,13 @@
 	            </div>
 	          </div>
 	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/ty-sketch-image.png'); " data-scrollax=" properties: { translateY: '-30%'}">
 	              <div class="icon d-flex text-center justify-content-center align-items-center">
 	                <span class="icon-search"></span>
 	              </div>
 	            </a>
 	            <div class="text order-1">
-	              <h4 class="subheading">Application</h4>
+	              <h4 class="subheading">Graphics</h4>
 	              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
 	              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
 	              <p><a href="#">View Project</a></p>
@@ -145,7 +145,7 @@
 	            </div>
 	          </div>
 	          <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-6.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
+	            <a href="portfolio-single.html" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/work-4.jpg'); " data-scrollax=" properties: { translateY: '-30%'}">
 	              <div class="icon d-flex text-center justify-content-center align-items-center">
 	                <span class="icon-search"></span>
 	              </div>
@@ -189,7 +189,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Me</h2>
-                <p class="h3 email"><a href="#">codeTy@email.com</a></p>
+                <p class="h3 email"><a href="#">codeTy.404@email.com</a></p>
               </div>
             </div>
           </div>
