--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
     <nav id="colorlib-main-nav" role="navigation">
       <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
       <div class="js-fullheight colorlib-table">
-      	<div class="img" style="background-image: url(images/author-2.jpg);"></div>
+      	<div class="img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></div>
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
@@ -61,7 +61,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Tywunda Shivers</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/tshivers-temp-profile-pic.jpg);"></span>Tywunda Shivers</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -104,7 +104,7 @@
                 <div class="media-body">
                   <h3 class="heading">HTML/CSS</h3>
                   <h3 class="heading">JavaScript</h3>
-                  <h3 class="heading">Node.js/<h3>
+                  <h3 class="heading">Node.js<h3>
                 </div>
               </div>    
             </div>
@@ -125,7 +125,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Me</h2>
-                <p class="h3 email"><a href="#">codeTy@email.com</a></p>
+                <p class="h3 email"><a href="#">codeTy.404@email.com</a></p>
               </div>
             </div>
           </div>
